force-app/main/default/objects/Ballot_Initiative__c/Ballot_Initiative__c.object-meta.xml
<CustomObject>
    <description>These are the actual things that will be voted upon.</description>
    <label>Ballot Initiative</label>
    <nameField>
        <label>Ballot Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ballot Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>