force-app/main/default/objects/Ballot_Initiative__c/fields/Election__c.field-meta.xml
<CustomField>
    <fullName>Election__c</fullName>
    <label>Election</label>
    <referenceTo>Election__c</referenceTo>
    <relationshipLabel>Ballot Initiatives</relationshipLabel>
    <relationshipName>Ballot_Initiatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>