force-app/main/default/objects/Ballot_Initiative__c/fields/Number_of_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Candidates__c</fullName>
    <label>Number of Candidates</label>
    <summaryForeignKey>Ballot_Selection__c.Ballot_Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>