force-app/main/default/objects/Ballot_Initiative__c/fields/Votes_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Votes_Allowed__c</fullName>
    <description>Maximum number of votes permitted for this office.</description>
    <inlineHelpText>Maximum number of votes allowed for this initiative.</inlineHelpText>
    <label>Votes Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>